A medias el videos portada

--- a/liosanJavascript/pages/admin/navAdmin.html
+++ b/liosanJavascript/pages/admin/navAdmin.html
@@ -39,6 +39,11 @@
                         <i class="fa-solid fa-drumstick-bite"></i>Registro Admin
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="videosPortada.html">
+                        <i class="fa-solid fa-drumstick-bite"></i>Videos de portada
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
