--- a/liosanJavascript/pages/admin/platillos.html
+++ b/liosanJavascript/pages/admin/platillos.html
@@ -34,10 +34,11 @@
 
 
     <!-- Scripts -->
+    <script src="../../public/js/loadNav.js" defer></script>
     <script src="../../public/js/app.js" defer></script>
     <script src="../../public/js/galery.js?28112022" defer></script>    <!-- DESARROLLO JavaScript-->
     <script src="../../public/js/codePlatillos.js"defer></script>
-    <script src="../../public/js/loadNav.js" defer></script> <!-- Archivo que cargará el nav -->
+ <!-- Archivo que cargará el nav -->
 
     <!-- Fonts -->
     <link rel="dns-prefetch" href="//fonts.gstatic.com">
@@ -69,7 +70,7 @@
 
                 <button id="btnCrear" type="button" class="btn btn-success" data-bs-toggle="modal"
                     data-bs-target="#modalPlatillo">Ingresar Nuevo Platillo</button>
-
+                    <!-- <button id="logout" type="button" class="btn btn-outline-danger">Logout</button> -->
                 </br></br></br>
 
                 <!--TABLA DE PLATILLOS-->
