--- a/liosanJavascript/pages/admin/login.html
+++ b/liosanJavascript/pages/admin/login.html
@@ -40,7 +40,7 @@
     <script src="../../public/js/app.js" defer></script>
     <script src="../../public/js/galery.js?28112022" defer></script> <!-- DESARROLLO JavaScript-->
     <script src="../../public/js/codeLoginRegister.js" defer></script>
-    <script src="../../public/js/loadNav.js" defer></script> <!-- Archivo que cargará el nav -->
+    <!-- <script src="../../public/js/loadNav.js" defer></script> --> <!-- Archivo que cargará el nav -->
 
     <!-- Fonts -->
     <link rel="dns-prefetch" href="//fonts.gstatic.com">
@@ -56,6 +56,60 @@
     <div id="app">
 
         <div class="w-100 w-md-75 w-lg-50 mx-auto">
+
+            <!-- nav.html Admin-->
+<nav class="navbar navbar-expand-lg bg-light bg-white shadow-lg">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="../plato/indexEntrada.html">
+            <img src="../../public/images/sarten.png" class="sartenAdmin" alt="Main Logo">
+            <img src="../../public/images/logoo.ico" class="logoAdmin" alt="Main Logo">
+            <span class="admin">Administración</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+<!--                 <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="pedidosfinal.html">
+                        <i class="fa-solid fa-bell-concierge"></i>
+                        Pedidos Final
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="pedidos.html">
+                        <i class="fa-solid fa-bell-concierge"></i>
+                        Pedidos
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="platillos.html">
+                        <i class="fa-solid fa-drumstick-bite"></i>Platillos
+                    </a>
+                </li> -->
+<!--                 <li class="nav-item">
+                    <a class="nav-link active" href="login.html">
+                        <i class="fa-solid fa-drumstick-bite"></i>Login
+                    </a>
+                </li> -->
+<!--                 <li class="nav-item">
+                    <a class="nav-link active" href="registerAdmin.html">
+                        <i class="fa-solid fa-drumstick-bite"></i>Registro Admin
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="videosPortada.html">
+                        <i class="fa-solid fa-drumstick-bite"></i>Videos de portada
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <button id="logout" type="button" class="btn btn-outline-danger">Logout</button>
+                </li> -->
+            </ul>
+        </div>
+    </div>
+</nav>
+
             <div id="navbar-container"></div> <!-- Aquí se cargará el navbar -->
         </div>
         <main class="py-4">
