Funciona la verificacion de login a las rutas protegidas.

--- a/liosanJavascript/pages/admin/navAdmin.html
+++ b/liosanJavascript/pages/admin/navAdmin.html
@@ -11,20 +11,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item">
+<!--                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="pedidosfinal.html">
                         <i class="fa-solid fa-bell-concierge"></i>
                         Pedidos Final
                     </a>
-                </li>
+                </li> -->
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="pedidos.html">
-                        <i class="fa-solid fa-bell-concierge"></i>
-                        Pedidos
+                    <a class="nav-link active" aria-current="page" href="/admin/pedidos">
+                        <i class="fa-solid fa-bell-concierge"></i>Pedidos
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="platillos.html">
+                    <a class="nav-link active" href="/admin/platillos">
                         <i class="fa-solid fa-drumstick-bite"></i>Platillos
                     </a>
                 </li>
@@ -34,13 +33,23 @@
                     </a>
                 </li> -->
                 <li class="nav-item">
-                    <a class="nav-link active" href="registerAdmin.html">
+                    <a class="nav-link active" href="/admin/registeradmin">
                         <i class="fa-solid fa-drumstick-bite"></i>Registro Admin
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="videosPortada.html">
+                    <a class="nav-link active" href="/admin/videosportada">
                         <i class="fa-solid fa-drumstick-bite"></i>Videos de portada
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/admin/contacto">
+                        <i class="fa-solid fa-drumstick-bite"></i>Contacto
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/admin/comentarios">
+                        <i class="fa-solid fa-drumstick-bite"></i>Comentarios
                     </a>
                 </li>
                 <li class="nav-item">
