Modificamos un poco el login

--- a/liosanJavascript/pages/admin/navAdmin.html
+++ b/liosanJavascript/pages/admin/navAdmin.html
@@ -4,7 +4,7 @@
         <a class="navbar-brand" href="../plato/indexEntrada.html">
             <img src="../../public/images/sarten.png" class="sartenAdmin" alt="Main Logo">
             <img src="../../public/images/logoo.ico" class="logoAdmin" alt="Main Logo">
-            <span class="admin">Administración</span>
+            <!-- <span class="admin">Administración</span> -->
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="/admin/platillos">
-                        <i class="fa-solid fa-drumstick-bite"></i>Platillos
+                        <i class="fa-solid fa-plate-wheat"></i>Platillos
                     </a>
                 </li>
 <!--                 <li class="nav-item">
@@ -34,22 +34,23 @@
                 </li> -->
                 <li class="nav-item">
                     <a class="nav-link active" href="/admin/registeradmin">
-                        <i class="fa-solid fa-drumstick-bite"></i>Registro Admin
+                        <!-- <i class="fa-solid fa-drumstick-bite"></i> -->
+                        <i class="fa-solid fa-address-card"></i>Registro Admin
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="/admin/videosportada">
-                        <i class="fa-solid fa-drumstick-bite"></i>Videos de portada
+                        <i class="fa-solid fa-film"></i></i>Videos
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="/admin/contacto">
-                        <i class="fa-solid fa-drumstick-bite"></i>Contacto
+                        <i class="fa-regular fa-address-book"></i>Contacto
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="/admin/comentarios">
-                        <i class="fa-solid fa-drumstick-bite"></i>Comentarios
+                        <i class="fa-solid fa-comments"></i>Comentarios
                     </a>
                 </li>
                 <li class="nav-item">
