--- a/liosanJavascript/pages/admin/pedidosfinal.html
+++ b/liosanJavascript/pages/admin/pedidosfinal.html
@@ -22,7 +22,8 @@
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <!--Bootstrap ICONS-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <!-- CSS ALERTIFY-->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/alertify.min.css" />
@@ -62,15 +63,16 @@
 
                 <!-- Ingreso de datos del pedido -->
                 <div class="row justify-content-center">
-                    <div class="card shadow bg-body col-md-5" >
+                    <div class="card shadow bg-body col-md-5">
                         <div class="card-body ">
-    <!--                         <div class="row justify-content-center">
+                            <!--                         <div class="row justify-content-center">
                                 <div class="col-md-8"> -->
                             <form>
                                 <div class="form-group row">
                                     <label for="mesaPedido" class="col-sm-2 col-form-label">N° Mesa</label>
                                     <div class="col-sm-10">
-                                        <input type="text" class="form-control" id="mesaPedido" placeholder="Ingrese la Mesa">
+                                        <input type="text" class="form-control" id="mesaPedido"
+                                            placeholder="Ingrese la Mesa">
                                     </div>
                                 </div>
                                 <div class="form-group row">
@@ -94,7 +96,7 @@
                                         <option selected>Elija un medio de pago</option>
                                         <option>Efectivo</option>
                                         <option>Trasferencia</option>
-                                       </select>
+                                    </select>
                                 </div>
                                 <br>
                                 <div class="form-group row">
