--- a/liosanJavascript/pages/admin/platillos.html
+++ b/liosanJavascript/pages/admin/platillos.html
@@ -173,7 +173,7 @@
                 </div>
             </div>
 
-
+            <!-- FIN  Modal formulario de ingreso de datos modal-->
         </main>
     </div>
 
