--- a/liosanJavascript/pages/plato/bebidas.html
+++ b/liosanJavascript/pages/plato/bebidas.html
@@ -57,9 +57,9 @@
 
 
 
-            <div class="clvideo">
-              <video src="../../public/video/361.mp4" autoplay muted loop></video>	
-            </div>
+          <div class="clvideo"   id="videoPortada">
+            <!-- Contenido de la base de datos llamados por la js/codeMenu.js -->
+          </div>
 
           <main class="py-3">
             
