--- a/liosanJavascript/pages/admin/navIndex.html
+++ b/liosanJavascript/pages/admin/navIndex.html
@@ -15,40 +15,40 @@
         <ul class="navbar-nav">
 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="indexEntrada.html">
+            <a class="nav-link active" aria-current="page" href="/">
               <i class="fa-solid fa-bell-concierge"></i>Entradas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="pollos.html">
+            <a class="nav-link active" href="/plato/pollos">
               <i class="fa-solid fa-drumstick-bite"></i>Pollos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="mariscos.html">
+            <a class="nav-link active" href="/plato/mariscos">
               <i class="fa-solid fa-fish-fins"></i>Mariscos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="chifa.html">
+            <a class="nav-link active" href="/plato/chifa">
               <i class="fa-solid fa-fire"></i>Chifa</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="sopas.html">
+            <a class="nav-link active" href="/plato/sopas">
               <i class="fa-solid fa-soap"></i>Sopas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="criolla.html">
+            <a class="nav-link active" href="/plato/criolla">
               <i class="fa-solid fa-plate-wheat"></i>Criolla</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle active" href="bebidas.html" role="button" data-bs-toggle="dropdown"
+            <a class="nav-link dropdown-toggle active" href="/plato/saborisadas" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
               <i class="fa-solid fa-wine-bottle"></i>Bebidas
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="bebidas.html">
+              <li><a class="dropdown-item" href="/plato/saborisadas">
                   <i class="fa-solid fa-whiskey-glass"></i>Saborisadas</a></li>
-              <li><a class="dropdown-item" href="cervezas.html">
+              <li><a class="dropdown-item" href="/plato/cervezas">
                   <i class="fa-solid fa-beer-mug-empty"></i>Cervezas</a></li>
-              <li><a class="dropdown-item" href="vinos.html">
+              <li><a class="dropdown-item" href="/plato/vinos">
                   <i class="fa-solid fa-wine-glass"></i>Vinos</a></li>
             </ul>
           </li>
