--- a/liosanJavascript/pages/plato/cervezas.html
+++ b/liosanJavascript/pages/plato/cervezas.html
@@ -55,9 +55,9 @@
           <div id="navbar-container-index"></div><!-- Aqui se carga el nav del index -->
 
 
-            <div class="clvideo">
-              <video src="../../public/video/361.mp4" autoplay muted loop></video>	
-            </div>
+          <div class="clvideo"   id="videoPortada">
+            <!-- Contenido de la base de datos llamados por la js/codeMenu.js -->
+          </div>
 
           <main class="py-3">
             
