--- a/liosanJavascript/pages/plato/pollos.html
+++ b/liosanJavascript/pages/plato/pollos.html
@@ -60,8 +60,8 @@
 
 
 
-            <div class="clvideo">
-              <video src="../../public/video/361.mp4" autoplay muted loop></video>	
+            <div class="clvideo"   id="videoPortada">
+              <!-- Contenido de la base de datos llamados por la js/codeMenu.js -->
             </div>
 
           <main class="py-3">
